# mwemu

./: .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  Makefile  OFFCODE.md  PARITY_DEBT.md  README.md  TODO.md  flake.nix  grep  log  main_updated.rs  migrate_log_red.js  package-lock.json  resume  rustfmt.toml  syscalls.md
crates/libmwemu/: Cargo.toml  README.md
crates/libmwemu/data/: apiset_w11.zlib
crates/libmwemu/src/: arch.rs  banzai.rs  breakpoint.rs  colors.rs  config.rs  console.rs  constants.rs  definitions.rs  emu_context.rs  exception.rs  exception_type.rs  flags.rs  fpu.rs  global_locks.rs  hooks.rs  kuser_shared.rs  lib.rs  macros.rs  regs64.rs  script.rs  tests.rs  thread_context.rs  threading.rs  tracing.rs  utils.rs
crates/libmwemu/src/api/: abi.rs  mod.rs
crates/libmwemu/src/api/linux/: libc.rs  mod.rs
crates/libmwemu/src/api/macos/: libsystem.rs  mod.rs
crates/libmwemu/src/api/windows/: helper.rs  mod.rs
crates/libmwemu/src/arch/: mod.rs
crates/libmwemu/src/arch/aarch64/: regs.rs
crates/libmwemu/src/arch/x86/: flags.rs  mod.rs  regs.rs
crates/libmwemu/src/context/: mod.rs
crates/libmwemu/src/debug/: console.rs  definitions.rs  mod.rs  script.rs  tracing.rs
crates/libmwemu/src/debug/gdb/: breakpoints.rs  mod.rs  registers.rs  target.rs
crates/libmwemu/src/elf/: elf32.rs  elf64.rs
crates/libmwemu/src/emu/: banzai.rs  call_stack.rs  config.rs  console.rs  decoded_instruction.rs  disassemble.rs  display.rs  emu_context.rs  exception_handlers.rs  execution.rs  execution_aarch64.rs  flags.rs  fls.rs  fpu.rs  fs.rs  initialization.rs  instruction_pointer.rs  iso.rs  loaders.rs  maps.rs  memory.rs  mod.rs  operands.rs  registers.rs  stack.rs  thread_context.rs  threading.rs  tls.rs  trace.rs  utils.rs  winapi.rs  winver.rs
crates/libmwemu/src/emu/disassemble/: mod.rs
crates/libmwemu/src/emu/execution/: control.rs  decode.rs  mod.rs  multithreaded.rs  rep.rs
crates/libmwemu/src/emu/loaders/: elf.rs  macho.rs  pe.rs
crates/libmwemu/src/emu/object_handle/: file_handle.rs  hive_parser.rs  mapping_handle.rs  mod.rs  registry_handle.rs  windows_path.rs
crates/libmwemu/src/emu/utils/: mod.rs
crates/libmwemu/src/engine/: logic.rs  mod.rs
crates/libmwemu/src/engine/aarch64/: helpers.rs  (+1 more)
crates/libmwemu/src/exception/: handlers.rs  types.rs
crates/libmwemu/src/fpu/: f80.rs
crates/libmwemu/src/gdb/: breakpoints.rs  mod.rs  registers.rs  target_xml.rs
crates/libmwemu/src/loaders/: mod.rs
crates/libmwemu/src/macho/: macho64.rs
crates/libmwemu/src/maps/: heap_allocation.rs  inspection.rs  mem64.rs  mod.rs  scalar.rs  search.rs  tlb.rs  utilities.rs
crates/libmwemu/src/ntapi/: ntapi32.rs
crates/libmwemu/src/pe/: DEVELOPMENT.md  LIEF_ARCHITECTURE.md  MIGRATION.md  PLAN.md  api_set_resolver.rs  mod.rs  pe32.rs  pe64.rs
crates/libmwemu/src/peb/: peb32.rs  peb64.rs
crates/libmwemu/src/serialization/: emu.rs  fpu.rs  instant.rs  maps.rs  minidump_converter.rs  mod.rs  pe32.rs  pe64.rs  thread_context.rs
crates/libmwemu/src/structures/: act_ctx_section_keyed_data32.rs  act_ctx_section_keyed_data64.rs  cp_info.rs  cpp_eh_record.rs  eh3_exception_registration.rs  exception_pointers.rs  hostent.rs  image_resource_directory.rs  image_resource_directory_entry.rs  image_tls_callback.rs  kernel64.rs  ldr_data_table_entry.rs  ldr_data_table_entry64.rs  list_entry64.rs  memory_basic_information.rs  mod.rs  nt_tib32.rs  ordinal_table.rs  os_version_info_ex_a.rs  os_version_info_ex_w.rs  p_scope_table_entry.rs  peb.rs  peb64.rs  peb_ldr_data.rs  peb_ldr_data64.rs  process_basic_information64.rs  rtl_user_process_parameters32.rs  rtl_user_process_parameters64.rs  startup_info32.rs  startup_info64.rs  stat.rs  system_info32.rs  system_time.rs  teb.rs  teb64.rs  tls_directory32.rs  tls_directory64.rs  vs_fixedfileinfo.rs  vs_versioninfo.rs
crates/libmwemu/src/syscall/: syscall32.rs  syscall64.rs
crates/libmwemu/src/tests/: aarch64_basic.rs  allocator32_test.rs  allocator64_test.rs  banzai_mode_tests.rs  basic_test_code_bytes_shld_shrd.rs  bit_manipulation_tests.rs  breakpoint_functionality.rs  call32.rs  call64.rs  cmpxchg_tests.rs  config_management.rs  config_tests.rs  console_control_tests.rs  elf64_aarch64_basic.rs  elf64lin_cpu_arithmetics.rs  elf64lin_flags.rs  elf64lin_fpu.rs  elf64lin_static_helloworld.rs  elf64lin_syscall64.rs  emulation_perf.rs  emulator_initialization.rs  error_conditions.rs  exception_handler32.rs  exception_handler64.rs  exe32win_minecraft.rs  exe64win_enigma.rs  exe64win_msgbox.rs  flag_calculations.rs  fpu_conversions.rs  fpu_f80_emulation.rs  fpu_stack_operations.rs  helpers.rs  hooks_system.rs  instruction_pointer_tests.rs  linux_call64.rs  logic_test.rs  macho64_basic.rs  macho64_hello.rs  maps_memory_operations.rs  maps_operations_tests.rs  (+39 more)
crates/libmwemu/src/threading/: context.rs  crit_state.rs  global_locks.rs  mod.rs  scheduler.rs
crates/libmwemu/src/utils/: helpers.rs  macros.rs  mod.rs
crates/libmwemu/src/winapi/: helper.rs  mod.rs
crates/libmwemu/src/windows/: constants.rs  kuser_shared.rs  mod.rs
crates/libmwemu/src/x86/: flags.rs
crates/mwemu/: Cargo.toml  README.md
crates/mwemu-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/mwemu-c/examples/: Makefile  demo.c
crates/mwemu-c/include/: mwemu.h
crates/mwemu-c/src/: lib.rs
crates/mwemu-mcp/: Cargo.toml  README.md
crates/mwemu-mcp/src/: jsonrpc.rs  main.rs  server.rs  tools.rs  transport.rs  util.rs
crates/mwemu/src/: main.rs
crates/pymwemu/: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  pyproject.toml  run_tests.py  test_all.sh
crates/pymwemu/examples/scripts/: api_implementation.py  danabot_crypto.py  danabot_extract.py  danabot_get_string_emu.py  danabot_int_deobfus_emu.py  emu_pwer.py  emu_rat.py  gozi_decryptbss_emu.py  gozi_dga.py  raccoon_strings.py  ssl_key128_gen.py  test.py  vidar_strings.py  vidar_strings2.py  xloader_dexor.py  xloader_keygen.py
crates/pymwemu/python/pymwemu/: __init__.py
crates/pymwemu/src/: lib.rs
crates/pymwemu/tests/: test_execution_engine.py  test_serialization.py
(+3308 files in other folders)
