[workspace]
resolver = "2"
members = [
    "crates/pymwemu", # uncomment to build. Builds from x86 linux but can also be used from mac using pip
    "crates/libmwemu",
    "crates/mwemu",
    "crates/mwemu-test",
]
# `cargo run` / `cargo build` / `cargo test` at repo root target these by default (not mwemu-test),
# so `cargo run` runs the main `mwemu` CLI without choosing a package.
default-members = [
    "crates/libmwemu",
    "crates/mwemu",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/sha0coder/mwemu"
description = "x86 32/64bits and system internals emulator, for securely emulating malware and other stuff."

[workspace.dependencies]
# Shared across multiple crates
iced-x86 = "1.21.0"
yaxpeax-arm = "0.4.0"
log = "0.4.22"
fast_log = "1.7"
env_logger = "0.11.8"
serde = { version = "1.0.217", features = ["derive"] }
libmwemu = { path = "crates/libmwemu" }

# libmwemu dependencies
uint = "0.9.5"
md5 = "0.7.0"
lazy_static = "1.4.0"
rand = "0.9.1"
ctrlc = "3.2.2"
scan_fmt = "0.2.6"
atty = "0.2.14"
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
bitcode = { version = "0.6.3", features = ["std", "serde"] }
ahash = { version = "0.8.12", features = ["serde"] }
bitfield = "0.19.1"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
zip = "0.6"
serde_arrays = "0.2.0"
slab = { version = "0.4.10", features = ["serde"] }
bytemuck = "1.23.1"
minidump = "0.26.0"
serde_yaml = "0.9"
nohash-hasher = "0.2.0"
memmap2 = "0.9.7"
byteorder = "1.5.0"
thiserror = "2.0.12"
tempfile = "3.23.0"
tempdir = "0.3.7"
gdbstub = "0.7.10"
gdbstub_arch = "0.3.3"
serial_test = "3.4.0"
dunce = "1.0.5"
soft-canonicalize = { version = "0.5", features = ["dunce"] }
hex = "0.4.3"

# Platform-specific
windows = { version = "0.62.2", features = ["Win32_System_SystemInformation"] }
windows-sys = "0.59.0"

# mwemu dependencies
clap = "2.33.3"

# pymwemu dependencies
pyo3 = "0.26.0"

# mwemu-test dependencies
rayon = "1.10"

[profile.release]
debug = 0
strip = true
opt-level = 3
panic = 'unwind'

[profile.dev]
debug = "full"
#opt-level = 1
opt-level = 0
panic = 'unwind'

[profile.dev-debug]
inherits = 'dev'
opt-level = 0
panic = 'unwind'

[profile.profiler]
inherits  = 'dev'
debug = 2
opt-level = 2
panic = 'unwind'
