[workspace]
resolver = "2"
members = [
    "crates/mwemu",
]
default-members = [
    "crates/mwemu",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/mwemuorg/mwemu"
description = "x86 32/64bits and system internals emulator, for securely emulating malware and other stuff."

[workspace.dependencies]
# Only the CLI lives in this repo now; the library and bindings are their own
# repos under mwemuorg. The CLI just needs these — everything else moved with
# libmwemu/pymwemu/etc.
clap = "2.33.3"
log = "0.4.22"
fast_log = "1.7"
env_logger = "0.11.8"
libmwemu = "0.25"

[profile.release]
debug = 0
strip = true
opt-level = 3
panic = 'unwind'

[profile.dev]
debug = "full"
#opt-level = 1
opt-level = 0
panic = 'unwind'

[profile.dev-debug]
inherits = 'dev'
opt-level = 0
panic = 'unwind'

[profile.profiler]
inherits  = 'dev'
debug = 2
opt-level = 2
panic = 'unwind'
