[package]
name = "libmwemu"
version = "0.24.5"
edition.workspace = true
authors = ["sha0coder"]
license.workspace = true
rust-version.workspace = true
description.workspace = true
#email = "sha0 at badchecksum.net"
documentation = "https://docs.rs/libmwemu"
homepage = "https://mwemu.github.io/"
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaxpeax-arch.workspace = true
iced-x86 = { version = "1.21.0", features = ["serde"] }
uint = "0.9.5"
md5 = "0.7.0"
lazy_static = "1.4.0"
rand = "0.9.1"
ctrlc = "3.2.2"
scan_fmt = "0.2.6"
atty = "0.2.14"
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
bitcode = { version = "0.6.3", features = ["std", "serde"] }
ahash = { version = "0.8.12", features = ["serde"] }
bitfield = "0.19.1"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
zip = "0.6"
serde_arrays = "0.2.0"
slab = { version = "0.4.10", features = ["serde"] }
bytemuck = "1.23.1"
minidump = "0.26.0"
serde_yaml = "0.9"
fast_log = { version = "1.7" }
nohash-hasher = "0.2.0"
byteorder = "1.5.0"
lief = "0.17.6"
thiserror = "2.0.12"
tempfile = "3.23.0"
tempdir = "0.3.7"
serial_test = "3.4.0"
dunce = "1.0.5"
soft-canonicalize = { version = "0.5", features = ["dunce"] }
memmap2 = "0.9"
nt-apiset = "0.1"
pelite = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_SystemInformation"] }
windows-sys = { version = "0.59.0", features = ["Win32_Storage", "Win32_Storage_FileSystem"] }

[dev-dependencies]
env_logger.workspace = true
hex.workspace = true

[features]
default = []
rax_x86_tests = []
log_mem_read = []
log_mem_write = []
