[package]
name = "libmwemu"
version = "0.24.5"
edition.workspace = true
authors = ["sha0coder"]
license.workspace = true
rust-version.workspace = true
description.workspace = true
#email = "sha0 at badchecksum.net"
documentation = "https://docs.rs/libmwemu"
homepage = "https://mwemu.github.io/"
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaxpeax-arch.workspace = true
iced-x86 = { workspace = true, features = ["serde"] }
uint.workspace = true
md5.workspace = true
lazy_static.workspace = true
rand.workspace = true
ctrlc.workspace = true
scan_fmt.workspace = true
atty.workspace = true
csv.workspace = true
chrono.workspace = true
serde.workspace = true
bitcode.workspace = true
ahash.workspace = true
bitfield.workspace = true
ureq.workspace = true
zip.workspace = true
serde_arrays.workspace = true
slab.workspace = true
bytemuck.workspace = true
minidump.workspace = true
serde_yaml.workspace = true
log.workspace = true
nohash-hasher.workspace = true
byteorder.workspace = true
fast_log.workspace = true
yaxpeax-arm.workspace = true
goblin.workspace = true
gdbstub.workspace = true
gdbstub_arch.workspace = true
flate2 = "1"
memmap2.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tempdir.workspace = true
serial_test.workspace = true
dunce.workspace = true
soft-canonicalize.workspace = true
lief = "0.17.6"
nt-apiset = "0.1"
pelite = "0.10"

[target.'cfg(windows)'.dependencies]
windows.workspace = true
windows-sys = { workspace = true, features = ["Win32_Storage", "Win32_Storage_FileSystem"] }

[dev-dependencies]
env_logger.workspace = true
hex.workspace = true

[features]
default = []
rax_x86_tests = []
log_mem_read = []
log_mem_write = []
