[package]
name = "pymwemu"
version = "0.11.1"
edition = "2021"
description = "x86 32/64bits and system internals emulator, for securely emulating malware and other stuff."
homepage = "http://mwemu.github.io/#pymwemu"
repository = "https://github.com/sha0coder/mwemu"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymwemu"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.26.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
env_logger = "0.11.6"
libmwemu = "=0.24.1"
#libmwemu = { path = "../libmwemu" }
log = "0.4.22"
iced-x86 = "1.21.0"


