[package]
name = "pymwemu"
version = "0.11.1"
edition.workspace = true
description.workspace = true
homepage = "http://mwemu.github.io/#pymwemu"
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymwemu"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
env_logger.workspace = true
#libmwemu = "=0.24.1"
libmwemu = { path = "../libmwemu" }
log.workspace = true
iced-x86.workspace = true
yaxpeax-arm.workspace = true

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
