[package]
name = "pymwemu"
version = "0.11.5"
edition.workspace = true
description.workspace = true
homepage = "http://mwemu.github.io/#pymwemu"
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_pymwemu"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
env_logger.workspace = true
#libmwemu = "0.24.5"
libmwemu = { path = "../libmwemu" }
log.workspace = true
iced-x86.workspace = true
yaxpeax-arm.workspace = true
pyo3-stub-gen = "0.22.3"

[build-dependencies]
pyo3-build-config = "0.26.0"

[features]
extension-module = ["pyo3/extension-module"]
# cargo strips libpython from stub_gen, because of extension-module
# so we set default to none
default = []
